--- a/res/layout/activity_file_selection.xml
+++ b/res/layout/activity_file_selection.xml
@@ -1,96 +1,79 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<merge xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
     tools:context=".ActivityHost" >
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:baselineAligned="false"
-        android:orientation="vertical" >
-
-        <RelativeLayout
-            android:id="@+id/panelControls"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content" >
-
-            <br.com.carlosrafaelgn.fplay.ui.BgButton
-                android:id="@+id/btnGoBack"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_alignParentLeft="true"
-                android:layout_centerVertical="true"
-                android:layout_marginRight="8dp"
-                android:contentDescription="@string/go_back"
-                android:nextFocusDown="@+id/list"
-                android:nextFocusForward="@+id/list"
-                android:nextFocusLeft="@+id/list"
-                android:nextFocusRight="@+id/list"
-                android:nextFocusUp="@+id/list" />
-
-            <TextView
-                android:id="@+id/lblTitle"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_alignParentRight="true"
-                android:layout_centerVertical="true"
-                android:layout_toRightOf="@+id/btnGoBack"
-                android:gravity="right"
-                android:padding="2dp"
-                android:visibility="gone" />
-
-            <br.com.carlosrafaelgn.fplay.ui.BgButton
-                android:id="@+id/btnMenu"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_alignParentRight="true"
-                android:layout_centerVertical="true"
-                android:layout_marginLeft="8dp"
-                android:contentDescription="@string/menu"
-                android:nextFocusDown="@+id/list"
-                android:nextFocusForward="@+id/list"
-                android:nextFocusLeft="@+id/btnGoBack"
-                android:nextFocusRight="@+id/list"
-                android:nextFocusUp="@+id/list"
-                android:visibility="gone" />
-        </RelativeLayout>
-
-        <br.com.carlosrafaelgn.fplay.ui.BgListView
-            android:id="@+id/list"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:nextFocusForward="@+id/btnGoBack" >
-
-            <requestFocus />
-        </br.com.carlosrafaelgn.fplay.ui.BgListView>
-    </LinearLayout>
-
-    <LinearLayout
-        android:id="@+id/panelLoading"
+    <RelativeLayout
+        android:id="@+id/panelControls"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_gravity="bottom"
-        android:baselineAligned="false"
-        android:orientation="vertical"
+        android:layout_alignParentTop="true" >
+
+        <br.com.carlosrafaelgn.fplay.ui.BgButton
+            android:id="@+id/btnGoBack"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentLeft="true"
+            android:contentDescription="@string/go_back"
+            android:nextFocusDown="@+id/list"
+            android:nextFocusForward="@+id/list"
+            android:nextFocusLeft="@+id/list"
+            android:nextFocusRight="@+id/list"
+            android:nextFocusUp="@+id/list" />
+
+        <br.com.carlosrafaelgn.fplay.ui.BgButton
+            android:id="@+id/btnMenu"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentRight="true"
+            android:contentDescription="@string/menu"
+            android:nextFocusDown="@+id/list"
+            android:nextFocusForward="@+id/list"
+            android:nextFocusLeft="@+id/btnGoBack"
+            android:nextFocusRight="@+id/list"
+            android:nextFocusUp="@+id/list"
+            android:visibility="gone" />
+    </RelativeLayout>
+
+    <br.com.carlosrafaelgn.fplay.ui.BgListView
+        android:id="@+id/list"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_alignParentBottom="true"
+        android:layout_below="@+id/panelControls"
+        android:nextFocusForward="@+id/btnGoBack" >
+
+        <requestFocus />
+    </br.com.carlosrafaelgn.fplay.ui.BgListView>
+
+    <RelativeLayout
+        android:id="@+id/panelLoading"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerInParent="true"
         android:visibility="gone" >
 
         <ProgressBar
+            android:id="@+id/barLoading"
             style="?android:attr/progressBarStyleHorizontal"
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="8dp"
-            android:layout_marginRight="8dp"
+            android:layout_alignLeft="@+id/lblLoading"
+            android:layout_alignRight="@+id/lblLoading"
             android:indeterminate="true" />
 
         <TextView
             android:id="@+id/lblLoading"
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="8dp"
+            android:layout_below="@+id/barLoading"
+            android:layout_centerHorizontal="true"
             android:gravity="center"
             android:padding="2dp"
             android:singleLine="true"
             android:text="@string/loading" />
-    </LinearLayout>
+    </RelativeLayout>
 
-</merge>
+</RelativeLayout>
