Improved the fullscreen behavior in the visualization

--- a/res/layout/activity_visualizer.xml
+++ b/res/layout/activity_visualizer.xml
@@ -1,9 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<br.com.carlosrafaelgn.fplay.ui.InterceptableLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/panelControls"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:fitsSystemWindows="false"
     tools:context=".ActivityVisualizer" >
 
     <RelativeLayout
@@ -79,10 +80,4 @@
             android:nextFocusUp="@+id/btnNext" />
     </RelativeLayout>
 
-    <RelativeLayout
-        android:id="@+id/panelBottom"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent" >
-    </RelativeLayout>
-
-</RelativeLayout>
+</br.com.carlosrafaelgn.fplay.ui.InterceptableLayout>
