Trying to improve the visualizer response and bin contrast

--- a/res/layout/activity_browser_radio.xml
+++ b/res/layout/activity_browser_radio.xml
@@ -20,7 +20,7 @@
             android:nextFocusForward="@+id/btnFavorite"
             android:nextFocusLeft="@+id/list"
             android:nextFocusRight="@+id/btnFavorite"
-            android:nextFocusUp="@+id/list" />
+            android:nextFocusUp="@+id/btnGoBackToPlayer" />
 
         <RelativeLayout
             android:id="@+id/panelLoading"
