Removed the split touch feature from all layouts

--- a/res/layout-sw500dp/activity_effects.xml
+++ b/res/layout-sw500dp/activity_effects.xml
@@ -5,10 +5,12 @@
     android:layout_height="match_parent"
     android:baselineAligned="false"
     android:orientation="vertical"
+    android:splitMotionEvents="false"
     tools:context=".ActivityHost" >
 
     <RelativeLayout
         android:id="@+id/panelTop"
+        android:splitMotionEvents="false"
         android:layout_width="match_parent"
         android:layout_height="wrap_content" >
 
