--- a/res/layout/activity_browser_radio.xml
+++ b/res/layout/activity_browser_radio.xml
@@ -3,10 +3,12 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:splitMotionEvents="false"
     tools:context=".ActivityHost" >
 
     <RelativeLayout
         android:id="@+id/panelControls"
+        android:splitMotionEvents="false"
         android:layout_width="match_parent"
         android:layout_height="wrap_content" >
 
@@ -80,6 +82,7 @@
 
     <br.com.carlosrafaelgn.fplay.ui.BgListView
         android:id="@+id/list"
+        android:splitMotionEvents="false"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_above="@+id/panelSecondary"
@@ -91,6 +94,7 @@
 
     <RelativeLayout
         android:id="@+id/panelSecondary"
+        android:splitMotionEvents="false"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true" >
