--- a/res/layout/activity_main_control.xml
+++ b/res/layout/activity_main_control.xml
@@ -6,10 +6,12 @@
     android:layout_height="match_parent"
     android:baselineAligned="false"
     android:orientation="vertical"
+    android:splitMotionEvents="false"
     tools:context=".ActivityHost" >
 
     <RelativeLayout
         android:id="@+id/panelTop"
+        android:splitMotionEvents="false"
         android:layout_width="match_parent"
         android:layout_height="10dp" >
 
@@ -78,6 +80,7 @@
         android:text="@string/nothing_playing" />
 
     <LinearLayout
+        android:splitMotionEvents="false"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:baselineAligned="false"
