--- a/res/layout/activity_settings.xml
+++ b/res/layout/activity_settings.xml
@@ -3,10 +3,12 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:splitMotionEvents="false"
     tools:context=".ActivityHost" >
 
     <RelativeLayout
         android:id="@+id/panelControls"
+        android:splitMotionEvents="false"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentTop="true" >
@@ -39,12 +41,14 @@
 
     <br.com.carlosrafaelgn.fplay.ui.ObservableScrollView
         android:id="@+id/list"
+        android:splitMotionEvents="false"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_below="@+id/panelControls" >
 
         <LinearLayout
             android:id="@+id/panelSettings"
+            android:splitMotionEvents="false"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:baselineAligned="false"
