--- a/res/layout/activity_visualizer.xml
+++ b/res/layout/activity_visualizer.xml
@@ -5,10 +5,12 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:fitsSystemWindows="false"
+    android:splitMotionEvents="false"
     tools:context=".ActivityVisualizer" >
 
     <RelativeLayout
         android:id="@+id/panelTop"
+        android:splitMotionEvents="false"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentLeft="true"
@@ -29,6 +31,7 @@
 
         <LinearLayout
             android:id="@+id/panelSecondary"
+            android:splitMotionEvents="false"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:baselineAligned="false"
