--- a/res/layout/main_widget.xml
+++ b/res/layout/main_widget.xml
@@ -2,14 +2,17 @@
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:splitMotionEvents="false"
     android:padding="@dimen/widget_margin" >
 
     <RelativeLayout
+        android:splitMotionEvents="false"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:background="@drawable/ic_main_widget" >
 
         <RelativeLayout
+            android:splitMotionEvents="false"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_alignParentLeft="true"
