--- a/res/layout/main_widget_transparent.xml
+++ b/res/layout/main_widget_transparent.xml
@@ -2,9 +2,11 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:splitMotionEvents="false"
     android:padding="@dimen/widget_margin" >
 
     <RelativeLayout
+        android:splitMotionEvents="false"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentLeft="true"
