--- a/res/layout/notification.xml
+++ b/res/layout/notification.xml
@@ -2,6 +2,7 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="64dp"
+    android:splitMotionEvents="false"
     android:minHeight="64dp" >
 
     <ImageView
@@ -16,6 +17,7 @@
         android:src="@drawable/ic_launcher" />
 
     <RelativeLayout
+        android:splitMotionEvents="false"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_above="@+id/lblTitle"
