--- a/res/layout/notification_simple.xml
+++ b/res/layout/notification_simple.xml
@@ -2,6 +2,7 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="64dp"
+    android:splitMotionEvents="false"
     android:minHeight="64dp" >
 
     <ImageView
