--- a/res/layout/activity_main.xml
+++ b/res/layout/activity_main.xml
@@ -46,8 +46,7 @@
         android:id="@+id/panelControls"
         android:splitMotionEvents="false"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:paddingBottom="8dp" >
+        android:layout_height="wrap_content" >
 
         <br.com.carlosrafaelgn.fplay.ui.BgButton
             android:id="@+id/btnAdd"
@@ -120,8 +119,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:baselineAligned="false"
-        android:orientation="horizontal"
-        android:paddingBottom="8dp" >
+        android:orientation="horizontal" >
 
         <br.com.carlosrafaelgn.fplay.ui.BgSeekBar
             android:id="@+id/barSeek"
