--- a/res/layout-sw500dp/activity_main_l.xml
+++ b/res/layout-sw500dp/activity_main_l.xml
@@ -180,7 +180,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginLeft="32dp"
                     android:layout_weight="1"
-                    android:nextFocusDown="@+id/btnPrev"
+                    android:nextFocusDown="@+id/btnMenu"
                     android:nextFocusForward="@+id/btnAdd"
                     android:nextFocusLeft="@+id/list"
                     android:nextFocusRight="@+id/btnAdd"
@@ -236,7 +236,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginRight="16dp"
-                    android:layout_toLeftOf="@+id/btnNext"
+                    android:layout_centerHorizontal="true"
                     android:contentDescription="@string/play"
                     android:nextFocusDown="@+id/list"
                     android:nextFocusForward="@+id/btnNext"
@@ -248,8 +248,7 @@
                     android:id="@+id/btnNext"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginRight="32dp"
-                    android:layout_toLeftOf="@+id/btnMenu"
+                    android:layout_toRightOf="@+id/btnPlay"
                     android:contentDescription="@string/next"
                     android:nextFocusDown="@+id/list"
                     android:nextFocusForward="@+id/btnMenu"
